# abletonlink

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
abletonlink/: __init__.py  bindings.cpp  cli.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
tests/: test_abletonlink.py
